--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>SPA 2048</title><script defer="defer" src="main.aaca152afb7b04398665.js"></script></head><body></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>SPA 2048</title>
+    <script defer="defer" src="main.4bf6fcc1dab3d7eec8c2.js"></script>
+</head>
+
+<body></body>
+
+</html>
